# tipdump

./: .gitignore  CMakeLists.txt  README.md
include/pixel/: ImageWriter.h  RgbaColor.h  RgbaImage.h
include/tip/: RgbaImage.h  TipFile.h  TipImage.h  TipStructures.h
src/libtip/: CMakeLists.txt  RgbaImage.cpp  TipFile.cpp  TipImage.cpp  TrivialStreamRead.h
src/pixel/: CMakeLists.txt  ImageWriter.cpp  RgbaImage.cpp  stb_image_write.h  stb_impl.cpp
src/tipdump/: CMakeLists.txt  main.cpp
